# pdi-nomad-plugin-rheed

./: .gitignore  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: mkdocs-deploy.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/pdi_nomad_plugin_rheed/: utils.py
src/pdi_nomad_plugin_rheed/parsers/: __init__.py  parser.py
src/pdi_nomad_plugin_rheed/schema_packages/: __init__.py  schema_package.py
src/pdi_nomad_rheed/parsers/: __init__.py  parser.py
src/pdi_nomad_rheed/schema_packages/: __init__.py  schema.py
tests/data/: export point scan.asc  schema_draft.yaml  test.archive.yaml
tests/parsers/: test_parser.py
tests/schema_packages/: test_schema_package.py
tutorial/: tutorial.html
